sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: ';' expected but ',' found.
        echange i+ecart, (i)
                       ^