sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n= getNombreValeurs()
  var ecart = n
  var m = true
  do{ 
    if ( ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt    
    }
    var i = 0
    m = false
    do{
      if( plusPetit(i, i+ecart)){ 
        echange i+ecart, (i)
        
        m = true
      }
      i = i+1
    }while (i + ecart < n )
    if ( m == false){
        return
    }
 }while (ecart>1)
}